# rinha-de-backend-2025-rust

./: .env.local  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  dev.sh  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  haproxy.cfg  init.sql  rinha-rust.code-workspace
src/: controller.rs  db.rs  error_handling.rs  main.rs  pubsub.rs  queue.rs  repository.rs  service.rs  structs.rs
src/payment_processors/: mod.rs  service.rs  structs.rs
