[package]
name = "rinha-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.4"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.13"
uuid = { version = "1.18.0", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0.142"
