[package]
name = "rinha-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.4"
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = {version = "0.7.10", features = ["with-uuid-1", "with-chrono-0_4"]}
uuid = { version = "1.18.0", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0.142"
hyper = "1.6.0"
hyper-util = {version = "0.1.16", features =  ["tokio", "server-auto", "http1"]}
tower = {version = "0.5.2", features = ["util"]}
